{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 165,
  "lineage": "c8c248fb-bb55-fb96-4722-698c087ff576",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_for_jumphost_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-02-04T07:18:39.619-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-ngt-training/global/firewalls/jump-host-rule",
            "log_config": [],
            "name": "jump-host-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/private-net",
            "priority": 1000,
            "project": "gcp-ngt-training",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/firewalls/jump-host-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "jump-host"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_vm_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-02-04T07:18:39.631-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-ngt-training/global/firewalls/private-vm-rule",
            "log_config": [],
            "name": "private-vm-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/private-net",
            "priority": 1000,
            "project": "gcp-ngt-training",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/firewalls/private-vm-rule",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "jump-host"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "vm-tag"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20220118",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/zones/us-central1-a/disks/public-vm-bastian-host"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-ngt-training/zones/us-central1-a/instances/public-vm-bastian-host",
            "instance_id": "5249230743717084422",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "kqBClctcP_k=",
            "name": "public-vm-bastian-host",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.66.178.149",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/private-net",
                "network_ip": "10.1.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/regions/us-central1/subnetworks/subnet-public",
                "subnetwork_project": "gcp-ngt-training"
              }
            ],
            "project": "gcp-ngt-training",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/zones/us-central1-a/instances/public-vm-bastian-host",
            "tags": [
              "http-server",
              "jump-host"
            ],
            "tags_fingerprint": "ZNQQgYK9iLk=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network1",
            "google_compute_subnetwork.vpc_subnetwork1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20220118",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/zones/us-central1-a/disks/private-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-ngt-training/zones/us-central1-a/instances/private-vm",
            "instance_id": "3096196073825303814",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "kqBClctcP_k=",
            "name": "private-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/private-net",
                "network_ip": "10.2.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/regions/us-central1/subnetworks/subnet-private",
                "subnetwork_project": "gcp-ngt-training"
              }
            ],
            "project": "gcp-ngt-training",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/zones/us-central1-a/instances/private-vm",
            "tags": [
              "http-server",
              "vm-tag"
            ],
            "tags_fingerprint": "CDDWZh3-9EQ=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network1",
            "google_compute_subnetwork.vpc_subnetwork2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/gcp-ngt-training/global/networks/private-net",
            "mtu": 0,
            "name": "private-net",
            "project": "gcp-ngt-training",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/private-net"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "advertised_groups": [
                  "ALL_SUBNETS"
                ],
                "asn": 64514
              }
            ],
            "creation_timestamp": "2022-02-04T07:19:04.059-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/gcp-ngt-training/regions/us-central1/routers/my-router",
            "name": "my-router",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/private-net",
            "project": "gcp-ngt-training",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/regions/us-central1/routers/my-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network1",
            "google_compute_subnetwork.vpc_subnetwork2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "private-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "gcp-ngt-training/us-central1/my-router/my-router-nat",
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "gcp-ngt-training",
            "region": "us-central1",
            "router": "my-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network1",
            "google_compute_router.router",
            "google_compute_subnetwork.vpc_subnetwork2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-04T07:18:39.795-08:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/gcp-ngt-training/regions/us-central1/subnetworks/subnet-public",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "subnet-public",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/private-net",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-ngt-training",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/regions/us-central1/subnetworks/subnet-public",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-04T07:18:40.726-08:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/gcp-ngt-training/regions/us-central1/subnetworks/subnet-private",
            "ip_cidr_range": "10.2.0.0/20",
            "name": "subnet-private",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/global/networks/private-net",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-ngt-training",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-ngt-training/regions/us-central1/subnetworks/subnet-private",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network1"
          ]
        }
      ]
    }
  ]
}